--- a/index.html
+++ b/index.html
@@ -11,7 +11,39 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h3>calcola il prezzo del tuo biglietto</h3>
+    <div class="card">
+        <label for="userName">Nome e Cognome</label>
+        <input type="text" id="userName">
+        <label for="kilometer">Km da percorrere</label>
+        <input type="number">
+        <label for="age">Fascia d'età</label>
+        <select id="age">
+            <option value="junior">Under 18</option>
+            <option value="standard">18-65 anni</option>
+            <option value="senior">Over 65</option>
+        </select>
+    </div>
+    <h3>Il tuo biglietto</h3>
+    <div class="card">
+        <h4>Dettaglio passeggeri</h4>
+        <div>
+            <h3>Nome passeggero</h3>
+            <!-- Output userName -->
+
+            <h5>Offerta</h5>
+            <!-- output promotion -->
+
+            <h5>Carrozza</h5>
+            <!-- output train -->
+
+            <h5>Codice CP</h5>
+            <!-- output code -->
+
+            <h5>Costo biglietto</h5>
+            <!-- output finalPrice -->
+        </div>
+    </div>
     <!-- custom js -->
     <script src="js/script.js"></script>
 </body>
