--- a/index.html
+++ b/index.html
@@ -33,18 +33,23 @@
         <div>
             <h3>Nome passeggero</h3>
             <!-- Output userName -->
+            <p id="userOutput"></p>
 
-            <h5>Offerta</h5>
+            <h4>Offerta</h4>
             <!-- output promotion -->
+            <p id="promotionOutput"></p>
 
-            <h5>Carrozza</h5>
-            <!-- output train -->
+            <h4>Carrozza</h4>
+            <!-- output coach -->
+            <p id="coachOutput"></p>
 
-            <h5>Codice CP</h5>
+            <h4>Codice CP</h4>
             <!-- output code -->
+            <p id="codeOutput"></p>
 
-            <h5>Costo biglietto</h5>
+            <h4>Costo biglietto</h4>
             <!-- output finalPrice -->
+            <p id="finalPrice"></p>
         </div>
     </div>
     <!-- custom js -->
