--- a/index.html
+++ b/index.html
@@ -5,51 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
    <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- custom style-->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h3>calcola il prezzo del tuo biglietto</h3>
-    <div class="card">
-        <label for="username">Nome e Cognome</label>
-        <input type="text" id="username">
-        <label for="kilometer">Km da percorrere</label>
-        <input type="number" id="kilometer">
-        <label for="age">Fascia d'età</label>
-        <select id="age">
-            <option value="junior" id="junior">Under 18</option>
-            <option value="standard" id="standard">18-65 anni</option>
-            <option value="senior" id="senior">Over 65</option>
-        </select>
-
-        <button id="submit">Genera</button>
-        <button id="reset">Annulla</button>
-    </div>
-    <h3>Il tuo biglietto</h3>
-    <div class="card">
-        <h4>Dettaglio passeggeri</h4>
-        <div>
-            <h3>Nome passeggero</h3>
-            <!-- Output userName -->
-            <p id="userOutput"></p>
-
-            <h4>Offerta</h4>
-            <!-- output promotion -->
-            <p id="promotionOutput"></p>
-
-            <h4>Carrozza</h4>
-            <!-- output coach -->
-            <p id="coachOutput"></p>
-
-            <h4>Codice CP</h4>
-            <!-- output code -->
-            <p id="codeOutput"></p>
-
-            <h4>Costo biglietto</h4>
-            <!-- output finalPrice -->
-            <p id="finalPrice"></p>
+    <div class="card w-75 mx-auto">
+        <div class="text-center">
+            <h3 class="card-header text-uppercase">calcola il prezzo del tuo biglietto</h3>
+            <div class="card-body">
+                <div class="input-group mb-3">
+                    <label class="input-group-text" for="username">Nome e Cognome</label>
+                    <input type="text" class="form-control" id="username">
+                    <label class="input-group-text"  for="kilometer">Km da percorrere</label>
+                    <input type="number" class="form-control" id="kilometer">
+                    <label class="input-group-text"  for="age">Fascia d'età</label>
+                    <select class="form-select" id="age">
+                        <option value="junior" id="junior">Under 18</option>
+                        <option value="standard" id="standard">18-65 anni</option>
+                        <option value="senior" id="senior">Over 65</option>
+                    </select>
+                </div>
+                <div class="btn-group">
+                    <button id="submit"  class="btn btn-outline-success">Genera</button>
+                    <button id="reset" class="btn btn-outline-danger">Annulla</button>
+                </div>
+            </div>
+        </div>
+        <div class="">
+            <h3 class="card-header text-center text-uppercase">Il tuo biglietto</h3>
+            <div class="p-3">
+                <h3 class="card-title">Dettaglio passeggeri</h3>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="text-uppercase">Nome passeggero</th>
+                            <th>Offerta</th>
+                            <th>Carrozza</th>
+                            <th>Codice CP</th>
+                            <th>Costo Biglietto</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td id="userOutput"></td>
+                            <td id="promotionOutput"></td>
+                            <td id="coachOutput"></td>
+                            <td id="codeOutput"></td>
+                            <td id="finalPrice"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
     <!-- custom js -->
